# moba-sim

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  flake.nix
.zed/: debug.json  settings.json  tasks.json
docs/superpowers/plans/: 2026-06-25-tests.md
docs/superpowers/specs/: 2026-06-25-tests-design.md
include/moba/: units.hpp
src/: main.cpp
test/: basic_test.cpp
